kubernetes/apps/downloads/sabnzbd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: downloads
  labels:
    app: sabnzbd
  annotations:
spec:
  rules:
    - host: sabnzbd.brzrkr.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
